--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "google-auth-library": "^9.15.1",
