--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.5.0",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
