--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.5.0",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.536.0",
     "mongoose": "^8.12.1",
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
