--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-select": "^5.10.1",
+    "recharts": "^3.2.0",
     "slugify": "^1.6.6",
     "uuid": "^10.0.0"
   },
