--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@aws-sdk/s3-request-presigner": "^3.886.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@pdfslick/core": "^3.0.0",
+    "@pdfslick/react": "^3.0.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -21,11 +23,14 @@
     "framer-motion": "^12.5.0",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "libreoffice-convert": "^1.7.0",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.12.1",
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "officegen": "^0.6.5",
+    "pdf-poppler": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
